# reka_comp

./: CMakeLists.txt  main.cpp
lib/: Config.h  Hand.h  PortCOM.h  Socket.h  rs232.c
lib/com/: PortCOM.h
src/: DefineFunctions.h  EmotivEpocController.cpp  EmotivEpocController.h  EmotivEpocEngine.cpp  EmotivEpocEngine.h  Hand.cpp  Hand.h  PortCOM.cpp  PortCOM.h  ProsthesisConsoleApplication.cpp  ProsthesisConsoleApplication.h
