CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "hand" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_LIBRARIES "" )
SET( PROJ_INCLUDES  "src" "lib" )

FILE( GLOB_RECURSE PROJ_HEADERS src/*.h lib/*.h )
FILE( GLOB_RECURSE PROJ_SOURCES main.cpp src/*.cpp lib/*.c )

PROJECT( ${PROJ_NAME} )

SET( CMAKE_CXX_FLAGS "-std=c++11" )

IF ( UNIX )
    SET( CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS}" )
ENDIF ( UNIX )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )

